# codex

.github/scripts/: run-bazel-ci.sh
codex-rs/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  events.rs  facts.rs  lib.rs  reducer.rs
codex-rs/app-server-protocol/schema/json/: codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/src/protocol/: common.rs  thread_history.rs  v2.rs
codex-rs/app-server/src/: codex_message_processor.rs
codex-rs/app-server/tests/suite/v2/: connection_handling_websocket.rs  (+2 more)
codex-rs/cli/src/: responses_cmd.rs
codex-rs/codex-api/src/: files.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: agent_identity.rs  arc_monitor.rs  arc_monitor_tests.rs  client_tests.rs  codex.rs  codex_tests.rs  compact.rs  compact_tests.rs  lib.rs  mcp_openai_file.rs  mcp_tool_call_tests.rs  realtime_context.rs
codex-rs/core/src/agent/: control_tests.rs
codex-rs/core/src/codex/: agent_task_lifecycle.rs
codex-rs/core/src/config/: config_tests.rs
codex-rs/core/src/guardian/: tests.rs
codex-rs/core/src/state/: session.rs  session_tests.rs
codex-rs/login/src/auth/: manager.rs
codex-rs/model-provider/: Cargo.toml
codex-rs/model-provider/src/: auth.rs  bearer_auth_provider.rs  lib.rs
codex-rs/protocol/src/: permissions.rs  protocol.rs
codex-rs/rollout/src/: list.rs  recorder.rs
codex-rs/sandboxing/src/: seatbelt_tests.rs
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  lib.rs  slash_command.rs
codex-rs/tui/src/chatwidget/: slash_dispatch.rs
(+2 files in other folders)
