[package]
edition.workspace = true
license.workspace = true
name = "codex-model-provider"
version.workspace = true

[lib]
doctest = false
name = "codex_model_provider"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-model-provider-info = { workspace = true }
codex-protocol = { workspace = true }

[dev-dependencies]
codex-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
